Added token transfers + latest block

--- a/DeFi/blockspy/address.html
+++ b/DeFi/blockspy/address.html
@@ -230,120 +230,28 @@
           <div class="row justify-content-center">
             <div class="col-lg-12">
               <h1 class="text-center">Latest Transactions:</h1>
+              <center>
               <table id="transactions">
 
               </table>
-</div></div></div></section></div>
-<!--
-              <div class="row row-grid justify-content-center">
-                <div class="col-lg-3">
-                  <div class="info">
-                    <div class="icon icon-primary">
-                      <i class="tim-icons icon-money-coins"></i>
-                    </div>
-                    <h4 class="info-title">Low Commission</h4>
-                    <hr class="line-primary">
-                    <p>Divide details about your work into parts. Write a few lines about each one. A paragraph describing a feature will.</p>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="info">
-                    <div class="icon icon-warning">
-                      <i class="tim-icons icon-chart-pie-36"></i>
-                    </div>
-                    <h4 class="info-title">High Incomes</h4>
-                    <hr class="line-warning">
-                    <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing feature will be a feature. </p>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="info">
-                    <div class="icon icon-success">
-                      <i class="tim-icons icon-single-02"></i>
-                    </div>
-                    <h4 class="info-title">Verified People</h4>
-                    <hr class="line-success">
-                    <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing be enough.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <h1 class="title">BLK•</h1>
-          </div>
-          <div class="col-md-3">
-            <ul class="nav">
-              <li class="nav-item">
-                <a href="/index.html" class="nav-link">
-                  Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/examples/landing-page.html" class="nav-link">
-                  Landing
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/examples/register-page.html" class="nav-link">
-                  Register
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/examples/profile-page.html" class="nav-link">
-                  Profile
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="nav">
-              <li class="nav-item">
-                <a href="https://creative-tim.com/contact-us" class="nav-link">
-                  Contact Us
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://creative-tim.com/about-us" class="nav-link">
-                  About Us
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://creative-tim.com/blog" class="nav-link">
-                  Blog
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://opensource.org/licenses/MIT" class="nav-link">
-                  License
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h3 class="title">Follow us:</h3>
-            <div class="btn-wrapper profile">
-              <a target="_blank" href="https://twitter.com/creativetim" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Follow us">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a target="_blank" href="https://www.facebook.com/creativetim" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Like us">
-                <i class="fab fa-facebook-square"></i>
-              </a>
-              <a target="_blank" href="https://dribbble.com/creativetim" class="btn btn-icon btn-neutral  btn-round btn-simple" data-toggle="tooltip" data-original-title="Follow us">
-                <i class="fab fa-dribbble"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-  -->
+
+              <br />
+
+              <h1 class="text-center">Latest Token Transfers:</h1>
+              <table id="tokens">
+
+              </table>
+
+              <br />
+
+              <div id="other">
+
+              </div>
+
+            </center>
+</div></div></div></section></div>
+
   </div>
   <!--   Core JS Files   -->
   <script src="/assets/js/core/jquery.min.js" type="text/javascript"></script>
